# docker/hospital-sdk/node-server/enrollUsers/registerPatients.js
@@ -34,8 +34,8 @@ const registerPatients = async (records) => {
         Accept: "application/json",
         "Content-Type": "application/json;charset=UTF-8",
         Authorization: `Bearer ${accessToken}`,
-        role: ROLE_ADMIN,
-        username: `${generateHospitalAdmin(records.hospitalId)}`,
+        // role: ROLE_ADMIN,
+        // username: `${generateHospitalAdmin(records.hospitalId)}`,
       },
       body: JSON.stringify(records),
     };
