# docker/hospital-sdk/node-server/routes/admin.js
@@ -9,8 +9,12 @@ const {
 const router = express.Router();
 
 //  Admin Routes //
-router.post("/doctors/register", authenticateJWT, createDoctor);
+// Authentication is removed on registration for Demo Purposes
+// In Real Use Cases, We have to let the admin to register onto the fabric
+// router.post("/doctors/register", authenticateJWT, createDoctor);
+// router.post("/patients/register", authenticateJWT, createPatient);
 router.get("/patients/_all", authenticateJWT, getAllPatients);
-router.post("/patients/register", authenticateJWT, createPatient);
+router.post("/doctors/register", createDoctor);
+router.post("/patients/register", createPatient);
 
 module.exports = router;
